assets/css/style.css
:root {
  --primary-font: "Orbit";
}

/*******GENERAL STYLING********/
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  height: 100vh;
  background-color: #e4e2dd;
  display: flex;
  justify-content: center;
  align-items: center;
}

p {
  font-family: var(--primary-font);
  font-size: 1.5rem;
  letter-spacing: 6px;
  color: #2b2b2b;
}

/******MEDIA QUERIES********/
@media only screen and (max-device-width: 481px) {
  p {
    font-size: 0.8rem;
    letter-spacing: unset;
  }
}

/******FONTS*******/
/**ORBIT FONT FOR 'UNDER CONSTRUCTION'**/
@font-face {
  font-family: "Orbit";
  src: url("/assets/fonts/Orbit-Regular.woff2") format("woff2"),
    url("/assets/fonts/Orbit-Regular.woff") format("woff");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

